--- a/Assignment_embedded_video/Pages/Index.cshtml
+++ b/Assignment_embedded_video/Pages/Index.cshtml
@@ -12,6 +12,11 @@
 <!-- A section with a video -->
 <section>
     <h3 id="title" class="video_title" onmouseover="newColor()" onmouseout="oldColor()">Fields of Gold - The Petersens</h3>
-    <embed style="width:720px; height:450px;" src="https://www.youtube.com/embed/ZM_76pkynos"></embed>
+    <embed style="width:420px; height:250px;" src="https://www.youtube.com/embed/ZM_76pkynos"></embed>
 </section>
 
+<p><button onclick="MoveTheBox()">Click Me to move the golden box</button></p>
+
+<div id="containerBox">
+    <div id="animateBox"></div>
+</div>
