--- a/Assignment_embedded_video/wwwroot/css/site.css
+++ b/Assignment_embedded_video/wwwroot/css/site.css
@@ -75,3 +75,17 @@ body {
     color: goldenrod;
     background-color: darkolivegreen;
 }
+
+#containerBox {
+    width: 400px;
+    height: 400px;
+    position: relative;
+    background: darkolivegreen;
+}
+
+#animateBox {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    background-color: goldenrod;
+}
